# stcindex

./: LICENSE.txt  README.md  pyproject.toml
examples/: haemers.py  validation.py
stcindex/: __init__.py  core.py
